# PluginGIFCapture

./: .gitignore  CMakeLists.txt  GIFCapture.cpp  GIFCapture.h  README.md  dllmain.cpp
libs/imgui/examples/: imgui_impl_dx11.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_win32.cpp
